5.2.0 -> 5.2.1:
    - jbj: python: fix: missing changelog in repo-md can segfault (David Smid).

5.2b1 -> 5.2.0:
    - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install

5.2a4 -> 5.2b1:
    - jbj: revert checkfiles behavior to last known good (rpm-5.1.9).
    - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.
    - jbj: add the Fedorable tag(s) for file digests.
    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
    - jbj: header: fix: re-initialize headers from pool more carefully.
    - jbj: fix: remove duplicated Provides: from pubkey headers.
    - jbj: eliminate (unused) DB_DBT_MALLOC flag while loading rpmdb headers.
    - jbj: remove (unused) --hdrfastdatalength and --hdrlazytagswab.
    - jbj: use PROT_READ for header blob's.
    - jbj: add --rpmmidebug.
    - jbj: bump sonames to libfoo-5.2.
    - jbj: rpmmi: rename the other methods for the match iterator object.
    - jbj: rpmmi: rename the typedef and rpmmi{Init,Next,Free} methods.
    - jbj: rpmmi: split out a pool destructor (prior to using).
    - jbj: inline rpmlog() to avoid arglist overhead when -O2 is used.
    - proyvind: make it possible to set macro files to load predefines from by
	defining PREMACROFILES at build time.
    - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
    - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
    - proyvind: remove %distepoch from %provideversion as it will break
	compatibility with rpm <= 4.5.
    - proyvind: rpm4compat: add a wrapper function for headerFormat().
    - jbj: mire: handle items from _mirePool like all other pools.
    - jbj: rpmds: dereference/flush global items earlier, before pool teardown.
    - jbj: rpmds: use _rpmdsPool, not heap, for rpmdsThis/rpmdsSingle as well.